--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
-Telethon==1.36.0
-SQLAlchemy==2.0.31
+aiohttp==3.9.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+asyncpg==0.29.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
 databases==0.9.0
+deep-translator==1.11.4
+frozenlist==1.4.1
 greenlet==3.0.3
+idna==3.7
+joblib==1.4.2
 langdetect==1.0.9
+multidict==6.0.5
 numpy==2.0.0
+pyaes==1.6.1
+pyasn1==0.6.0
+requests==2.32.3
+rsa==4.9
 scikit-learn==1.5.1
+scipy==1.14.0
+six==1.16.0
+soupsieve==2.5
+SQLAlchemy==2.0.31
+Telethon==1.36.0
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+urllib3==2.2.2
+yarl==1.9.4
